--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>India: Where Truth is the Only Authority | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>How silence awakens your inner presence</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>The real source of humanity’s troubles</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -695,7 +695,7 @@
                     <div class="video-info">
                         <h3>The only thing you can truly know for sure</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>How difficulty awakens your consciousness</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1819,7 +1819,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>India: Where Truth is the Only Authority | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7975,7 +7975,7 @@
                         <div class="video-info">
                             <h3>How silence awakens your inner presence</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8063,7 +8063,7 @@
                         <div class="video-info">
                             <h3>The real source of humanity’s troubles</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8107,7 +8107,7 @@
                         <div class="video-info">
                             <h3>The only thing you can truly know for sure</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8151,7 +8151,7 @@
                         <div class="video-info">
                             <h3>How difficulty awakens your consciousness</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8360,7 +8360,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
