--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Bach Got GOT by Arthur!😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">51 minutes ago</div>
+                        <div class="date">59 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & WillNE in The WORLD'S FASTEST Car</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -471,9 +471,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/shorts/pRLc_Q7inYY" target="_blank">
-                    <img src="https://i.ytimg.com/vi/pRLc_Q7inYY/mqdefault.jpg" alt="Arthur & Harry Have a Race🏃🏻‍♂️🏊🏻‍♂️">
+                    <img src="https://i.ytimg.com/vi/pRLc_Q7inYY/mqdefault.jpg" alt="Arthur & W2S Have a Race🏃🏻‍♂️🏊🏻‍♂️">
                     <div class="video-info">
-                        <h3>Arthur & Harry Have a Race🏃🏻‍♂️🏊🏻‍♂️</h3>
+                        <h3>Arthur & W2S Have a Race🏃🏻‍♂️🏊🏻‍♂️</h3>
                         <div class="channel">Arthur Frederick</div>
                         <div class="date">3 days ago</div>
                     </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Bach Got GOT by Arthur!😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">51 minutes ago</div>
+                            <div class="date">59 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & WillNE in The WORLD'S FASTEST Car</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10360,9 +10360,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/shorts/pRLc_Q7inYY" target="_blank">
-                        <img src="https://i.ytimg.com/vi/pRLc_Q7inYY/mqdefault.jpg" alt="Arthur & Harry Have a Race🏃🏻‍♂️🏊🏻‍♂️">
+                        <img src="https://i.ytimg.com/vi/pRLc_Q7inYY/mqdefault.jpg" alt="Arthur & W2S Have a Race🏃🏻‍♂️🏊🏻‍♂️">
                         <div class="video-info">
-                            <h3>Arthur & Harry Have a Race🏃🏻‍♂️🏊🏻‍♂️</h3>
+                            <h3>Arthur & W2S Have a Race🏃🏻‍♂️🏊🏻‍♂️</h3>
                             <div class="channel">Arthur Frederick</div>
                             <div class="date">3 days ago</div>
                         </div>
