--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>RUNNNN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>It’s better in real life</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Back at it</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>It gets to a point</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Was this icky enough?</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>India: Where Truth is the Only Authority | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1036,7 +1036,7 @@
                     <div class="video-info">
                         <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>India: Where Truth is the Only Authority | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7975,7 +7975,7 @@
                         <div class="video-info">
                             <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8206,7 +8206,7 @@
                         <div class="video-info">
                             <h3>Watch Sadhguru's Unreleased Video from 2008 | Sadhguru on Drishti, Karma & Enlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>RUNNNN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>It’s better in real life</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Back at it</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>It gets to a point</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Was this icky enough?</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
